// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResolveActions with confirmation step renders 1`] = `
<ResolveActions
  confirmLabel="Resolve"
  confirmMessage="Are you sure???"
  hasRelease={false}
  isAutoResolved={false}
  isResolved={false}
  onUpdate={[MockFunction]}
  orgId="org-1"
  projectId="proj-1"
  shouldConfirm={true}
>
  <div
    style={
      Object {
        "display": "inline-block",
      }
    }
  >
    <CustomResolutionModal
      onCanceled={[Function]}
      onSelected={[Function]}
      orgId="org-1"
      projectId="proj-1"
      show={false}
    >
      <Modal
        animation={false}
        autoFocus={true}
        backdrop={true}
        bsClass="modal"
        dialogComponentClass={[Function]}
        enforceFocus={true}
        keyboard={true}
        manager={
          ModalManager {
            "add": [Function],
            "containers": Array [],
            "data": Array [],
            "handleContainerOverflow": true,
            "hideSiblingNodes": true,
            "isTopModal": [Function],
            "modals": Array [],
            "remove": [Function],
          }
        }
        onHide={[Function]}
        renderBackdrop={[Function]}
        restoreFocus={true}
        show={false}
      >
        <Modal
          autoFocus={true}
          backdrop={true}
          backdropClassName="modal-backdrop"
          containerClassName="modal-open"
          enforceFocus={true}
          keyboard={true}
          manager={
            ModalManager {
              "add": [Function],
              "containers": Array [],
              "data": Array [],
              "handleContainerOverflow": true,
              "hideSiblingNodes": true,
              "isTopModal": [Function],
              "modals": Array [],
              "remove": [Function],
            }
          }
          onEntering={[Function]}
          onExited={[Function]}
          onHide={[Function]}
          renderBackdrop={[Function]}
          restoreFocus={true}
          show={false}
        />
      </Modal>
    </CustomResolutionModal>
    <GuideAnchor
      target="resolve"
    >
      <div
        className="btn-group"
      >
        <ActionLink
          className="btn btn-default btn-sm"
          confirmLabel="Resolve"
          disabled={false}
          message="Are you sure???"
          onAction={[Function]}
          shouldConfirm={true}
          title="Resolve"
        >
          <Confirm
            cancelText="Cancel"
            confirmText="Resolve"
            disableConfirmButton={false}
            message="Are you sure???"
            onConfirm={[Function]}
            priority="primary"
            stopPropagation={false}
          >
            <a
              aria-label="Resolve"
              className="btn btn-default btn-sm"
              onClick={[Function]}
              title="Resolve"
            >
               
              <span
                className="icon-checkmark hidden-xs"
                style={
                  Object {
                    "marginRight": 5,
                  }
                }
              />
              Resolve
            </a>
            <Modal
              animation={false}
              autoFocus={true}
              backdrop={true}
              bsClass="modal"
              dialogComponentClass={[Function]}
              enforceFocus={true}
              keyboard={true}
              manager={
                ModalManager {
                  "add": [Function],
                  "containers": Array [],
                  "data": Array [],
                  "handleContainerOverflow": true,
                  "hideSiblingNodes": true,
                  "isTopModal": [Function],
                  "modals": Array [],
                  "remove": [Function],
                }
              }
              onHide={[Function]}
              renderBackdrop={[Function]}
              restoreFocus={true}
              show={false}
            >
              <Modal
                autoFocus={true}
                backdrop={true}
                backdropClassName="modal-backdrop"
                containerClassName="modal-open"
                enforceFocus={true}
                keyboard={true}
                manager={
                  ModalManager {
                    "add": [Function],
                    "containers": Array [],
                    "data": Array [],
                    "handleContainerOverflow": true,
                    "hideSiblingNodes": true,
                    "isTopModal": [Function],
                    "modals": Array [],
                    "remove": [Function],
                  }
                }
                onEntering={[Function]}
                onExited={[Function]}
                onHide={[Function]}
                renderBackdrop={[Function]}
                restoreFocus={true}
                show={false}
              />
            </Modal>
          </Confirm>
        </ActionLink>
        <DropdownLink
          alwaysRenderMenu={true}
          anchorRight={false}
          caret={true}
          className="btn btn-default btn-sm"
          disabled={false}
          key="resolve-dropdown"
          title=""
        >
          <DropdownMenu
            alwaysRenderMenu={true}
            closeOnEscape={true}
            keepMenuOpen={false}
          >
            <span
              className="dropdown"
            >
              <a
                className="dropdown-actor btn btn-default btn-sm dropdown-toggle"
                onClick={[Function]}
                onKeyDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                style={
                  Object {
                    "outline": "none",
                  }
                }
              >
                <div
                  className="dropdown-actor-title"
                >
                  <span />
                  <i
                    className="icon-arrow-down"
                  />
                </div>
              </a>
              <ul
                className="dropdown-menu"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <MenuItem
                  header={true}
                >
                  <li
                    className="dropdown-header"
                    role="presentation"
                  >
                    Resolved In
                  </li>
                </MenuItem>
                <MenuItem
                  noAnchor={true}
                >
                  <li
                    className=""
                    role="presentation"
                  >
                    <Tooltip
                      containerDisplayMode="block"
                      position="top"
                      title="Set up release tracking in order to use this feature."
                    >
                      <Manager>
                        <Reference>
                          <InnerReference
                            setReferenceNode={[Function]}
                          >
                            <Container
                              aria-describedby=""
                              containerDisplayMode="block"
                              innerRef={[Function]}
                              onBlur={[Function]}
                              onFocus={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                            >
                              <span
                                aria-describedby=""
                                className="css-1v55bsv-Container eowlwvy0"
                                onBlur={[Function]}
                                onFocus={[Function]}
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                              >
                                <ActionLink
                                  confirmLabel="Resolve"
                                  disabled={false}
                                  message="Are you sure???"
                                  onAction={[Function]}
                                  shouldConfirm={true}
                                >
                                  <Confirm
                                    cancelText="Cancel"
                                    confirmText="Resolve"
                                    disableConfirmButton={false}
                                    message="Are you sure???"
                                    onConfirm={[Function]}
                                    priority="primary"
                                    stopPropagation={false}
                                  >
                                    <a
                                      onClick={[Function]}
                                    >
                                       
                                      The next release
                                    </a>
                                    <Modal
                                      animation={false}
                                      autoFocus={true}
                                      backdrop={true}
                                      bsClass="modal"
                                      dialogComponentClass={[Function]}
                                      enforceFocus={true}
                                      keyboard={true}
                                      manager={
                                        ModalManager {
                                          "add": [Function],
                                          "containers": Array [],
                                          "data": Array [],
                                          "handleContainerOverflow": true,
                                          "hideSiblingNodes": true,
                                          "isTopModal": [Function],
                                          "modals": Array [],
                                          "remove": [Function],
                                        }
                                      }
                                      onHide={[Function]}
                                      renderBackdrop={[Function]}
                                      restoreFocus={true}
                                      show={false}
                                    >
                                      <Modal
                                        autoFocus={true}
                                        backdrop={true}
                                        backdropClassName="modal-backdrop"
                                        containerClassName="modal-open"
                                        enforceFocus={true}
                                        keyboard={true}
                                        manager={
                                          ModalManager {
                                            "add": [Function],
                                            "containers": Array [],
                                            "data": Array [],
                                            "handleContainerOverflow": true,
                                            "hideSiblingNodes": true,
                                            "isTopModal": [Function],
                                            "modals": Array [],
                                            "remove": [Function],
                                          }
                                        }
                                        onEntering={[Function]}
                                        onExited={[Function]}
                                        onHide={[Function]}
                                        renderBackdrop={[Function]}
                                        restoreFocus={true}
                                        show={false}
                                      />
                                    </Modal>
                                  </Confirm>
                                </ActionLink>
                              </span>
                            </Container>
                          </InnerReference>
                        </Reference>
                      </Manager>
                    </Tooltip>
                    <Tooltip
                      containerDisplayMode="block"
                      position="top"
                      title="Set up release tracking in order to use this feature."
                    >
                      <Manager>
                        <Reference>
                          <InnerReference
                            setReferenceNode={[Function]}
                          >
                            <Container
                              aria-describedby=""
                              containerDisplayMode="block"
                              innerRef={[Function]}
                              onBlur={[Function]}
                              onFocus={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                            >
                              <span
                                aria-describedby=""
                                className="css-1v55bsv-Container eowlwvy0"
                                onBlur={[Function]}
                                onFocus={[Function]}
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                              >
                                <ActionLink
                                  confirmLabel="Resolve"
                                  disabled={false}
                                  message="Are you sure???"
                                  onAction={[Function]}
                                  shouldConfirm={true}
                                >
                                  <Confirm
                                    cancelText="Cancel"
                                    confirmText="Resolve"
                                    disableConfirmButton={false}
                                    message="Are you sure???"
                                    onConfirm={[Function]}
                                    priority="primary"
                                    stopPropagation={false}
                                  >
                                    <a
                                      onClick={[Function]}
                                    >
                                       
                                      The current release
                                    </a>
                                    <Modal
                                      animation={false}
                                      autoFocus={true}
                                      backdrop={true}
                                      bsClass="modal"
                                      dialogComponentClass={[Function]}
                                      enforceFocus={true}
                                      keyboard={true}
                                      manager={
                                        ModalManager {
                                          "add": [Function],
                                          "containers": Array [],
                                          "data": Array [],
                                          "handleContainerOverflow": true,
                                          "hideSiblingNodes": true,
                                          "isTopModal": [Function],
                                          "modals": Array [],
                                          "remove": [Function],
                                        }
                                      }
                                      onHide={[Function]}
                                      renderBackdrop={[Function]}
                                      restoreFocus={true}
                                      show={false}
                                    >
                                      <Modal
                                        autoFocus={true}
                                        backdrop={true}
                                        backdropClassName="modal-backdrop"
                                        containerClassName="modal-open"
                                        enforceFocus={true}
                                        keyboard={true}
                                        manager={
                                          ModalManager {
                                            "add": [Function],
                                            "containers": Array [],
                                            "data": Array [],
                                            "handleContainerOverflow": true,
                                            "hideSiblingNodes": true,
                                            "isTopModal": [Function],
                                            "modals": Array [],
                                            "remove": [Function],
                                          }
                                        }
                                        onEntering={[Function]}
                                        onExited={[Function]}
                                        onHide={[Function]}
                                        renderBackdrop={[Function]}
                                        restoreFocus={true}
                                        show={false}
                                      />
                                    </Modal>
                                  </Confirm>
                                </ActionLink>
                              </span>
                            </Container>
                          </InnerReference>
                        </Reference>
                      </Manager>
                    </Tooltip>
                    <Tooltip
                      containerDisplayMode="block"
                      position="top"
                      title="Set up release tracking in order to use this feature."
                    >
                      <Manager>
                        <Reference>
                          <InnerReference
                            setReferenceNode={[Function]}
                          >
                            <Container
                              aria-describedby=""
                              containerDisplayMode="block"
                              innerRef={[Function]}
                              onBlur={[Function]}
                              onFocus={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                            >
                              <span
                                aria-describedby=""
                                className="css-1v55bsv-Container eowlwvy0"
                                onBlur={[Function]}
                                onFocus={[Function]}
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                              >
                                <ActionLink
                                  confirmLabel="Resolve"
                                  disabled={false}
                                  message="Are you sure???"
                                  onAction={[Function]}
                                  shouldConfirm={false}
                                >
                                  <ActionLinkAnchor
                                    className=""
                                    data-test-id="action-link"
                                    disabled={false}
                                    onClick={[Function]}
                                  >
                                    <a
                                      className="css-19ecu88-ActionLinkAnchor ehtyk0g0"
                                      data-test-id="action-link"
                                      disabled={false}
                                      onClick={[Function]}
                                    >
                                      Another version…
                                    </a>
                                  </ActionLinkAnchor>
                                </ActionLink>
                              </span>
                            </Container>
                          </InnerReference>
                        </Reference>
                      </Manager>
                    </Tooltip>
                  </li>
                </MenuItem>
              </ul>
            </span>
          </DropdownMenu>
        </DropdownLink>
      </div>
    </GuideAnchor>
  </div>
</ResolveActions>
`;

exports[`ResolveActions without confirmation renders 1`] = `
<ResolveActions
  confirmLabel="Resolve"
  hasRelease={false}
  isAutoResolved={false}
  isResolved={false}
  onUpdate={[MockFunction]}
  orgId="org-1"
  projectId="proj-1"
>
  <div
    style={
      Object {
        "display": "inline-block",
      }
    }
  >
    <CustomResolutionModal
      onCanceled={[Function]}
      onSelected={[Function]}
      orgId="org-1"
      projectId="proj-1"
      show={false}
    >
      <Modal
        animation={false}
        autoFocus={true}
        backdrop={true}
        bsClass="modal"
        dialogComponentClass={[Function]}
        enforceFocus={true}
        keyboard={true}
        manager={
          ModalManager {
            "add": [Function],
            "containers": Array [],
            "data": Array [],
            "handleContainerOverflow": true,
            "hideSiblingNodes": true,
            "isTopModal": [Function],
            "modals": Array [],
            "remove": [Function],
          }
        }
        onHide={[Function]}
        renderBackdrop={[Function]}
        restoreFocus={true}
        show={false}
      >
        <Modal
          autoFocus={true}
          backdrop={true}
          backdropClassName="modal-backdrop"
          containerClassName="modal-open"
          enforceFocus={true}
          keyboard={true}
          manager={
            ModalManager {
              "add": [Function],
              "containers": Array [],
              "data": Array [],
              "handleContainerOverflow": true,
              "hideSiblingNodes": true,
              "isTopModal": [Function],
              "modals": Array [],
              "remove": [Function],
            }
          }
          onEntering={[Function]}
          onExited={[Function]}
          onHide={[Function]}
          renderBackdrop={[Function]}
          restoreFocus={true}
          show={false}
        />
      </Modal>
    </CustomResolutionModal>
    <GuideAnchor
      target="resolve"
    >
      <div
        className="btn-group"
      >
        <ActionLink
          className="btn btn-default btn-sm"
          confirmLabel="Resolve"
          disabled={false}
          onAction={[Function]}
          shouldConfirm={false}
          title="Resolve"
        >
          <ActionLinkAnchor
            aria-label="Resolve"
            className="btn btn-default btn-sm"
            data-test-id="action-link-resolve"
            disabled={false}
            onClick={[Function]}
          >
            <a
              aria-label="Resolve"
              className="btn btn-default btn-sm css-19ecu88-ActionLinkAnchor ehtyk0g0"
              data-test-id="action-link-resolve"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="icon-checkmark hidden-xs"
                style={
                  Object {
                    "marginRight": 5,
                  }
                }
              />
              Resolve
            </a>
          </ActionLinkAnchor>
        </ActionLink>
        <DropdownLink
          alwaysRenderMenu={true}
          anchorRight={false}
          caret={true}
          className="btn btn-default btn-sm"
          disabled={false}
          key="resolve-dropdown"
          title=""
        >
          <DropdownMenu
            alwaysRenderMenu={true}
            closeOnEscape={true}
            keepMenuOpen={false}
          >
            <span
              className="dropdown"
            >
              <a
                className="dropdown-actor btn btn-default btn-sm dropdown-toggle"
                onClick={[Function]}
                onKeyDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                style={
                  Object {
                    "outline": "none",
                  }
                }
              >
                <div
                  className="dropdown-actor-title"
                >
                  <span />
                  <i
                    className="icon-arrow-down"
                  />
                </div>
              </a>
              <ul
                className="dropdown-menu"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <MenuItem
                  header={true}
                >
                  <li
                    className="dropdown-header"
                    role="presentation"
                  >
                    Resolved In
                  </li>
                </MenuItem>
                <MenuItem
                  noAnchor={true}
                >
                  <li
                    className=""
                    role="presentation"
                  >
                    <Tooltip
                      containerDisplayMode="block"
                      position="top"
                      title="Set up release tracking in order to use this feature."
                    >
                      <Manager>
                        <Reference>
                          <InnerReference
                            setReferenceNode={[Function]}
                          >
                            <Container
                              aria-describedby=""
                              containerDisplayMode="block"
                              innerRef={[Function]}
                              onBlur={[Function]}
                              onFocus={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                            >
                              <span
                                aria-describedby=""
                                className="css-1v55bsv-Container eowlwvy0"
                                onBlur={[Function]}
                                onFocus={[Function]}
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                              >
                                <ActionLink
                                  confirmLabel="Resolve"
                                  disabled={false}
                                  onAction={[Function]}
                                  shouldConfirm={false}
                                >
                                  <ActionLinkAnchor
                                    className=""
                                    data-test-id="action-link"
                                    disabled={false}
                                    onClick={[Function]}
                                  >
                                    <a
                                      className="css-19ecu88-ActionLinkAnchor ehtyk0g0"
                                      data-test-id="action-link"
                                      disabled={false}
                                      onClick={[Function]}
                                    >
                                      The next release
                                    </a>
                                  </ActionLinkAnchor>
                                </ActionLink>
                              </span>
                            </Container>
                          </InnerReference>
                        </Reference>
                      </Manager>
                    </Tooltip>
                    <Tooltip
                      containerDisplayMode="block"
                      position="top"
                      title="Set up release tracking in order to use this feature."
                    >
                      <Manager>
                        <Reference>
                          <InnerReference
                            setReferenceNode={[Function]}
                          >
                            <Container
                              aria-describedby=""
                              containerDisplayMode="block"
                              innerRef={[Function]}
                              onBlur={[Function]}
                              onFocus={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                            >
                              <span
                                aria-describedby=""
                                className="css-1v55bsv-Container eowlwvy0"
                                onBlur={[Function]}
                                onFocus={[Function]}
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                              >
                                <ActionLink
                                  confirmLabel="Resolve"
                                  disabled={false}
                                  onAction={[Function]}
                                  shouldConfirm={false}
                                >
                                  <ActionLinkAnchor
                                    className=""
                                    data-test-id="action-link"
                                    disabled={false}
                                    onClick={[Function]}
                                  >
                                    <a
                                      className="css-19ecu88-ActionLinkAnchor ehtyk0g0"
                                      data-test-id="action-link"
                                      disabled={false}
                                      onClick={[Function]}
                                    >
                                      The current release
                                    </a>
                                  </ActionLinkAnchor>
                                </ActionLink>
                              </span>
                            </Container>
                          </InnerReference>
                        </Reference>
                      </Manager>
                    </Tooltip>
                    <Tooltip
                      containerDisplayMode="block"
                      position="top"
                      title="Set up release tracking in order to use this feature."
                    >
                      <Manager>
                        <Reference>
                          <InnerReference
                            setReferenceNode={[Function]}
                          >
                            <Container
                              aria-describedby=""
                              containerDisplayMode="block"
                              innerRef={[Function]}
                              onBlur={[Function]}
                              onFocus={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                            >
                              <span
                                aria-describedby=""
                                className="css-1v55bsv-Container eowlwvy0"
                                onBlur={[Function]}
                                onFocus={[Function]}
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                              >
                                <ActionLink
                                  confirmLabel="Resolve"
                                  disabled={false}
                                  onAction={[Function]}
                                  shouldConfirm={false}
                                >
                                  <ActionLinkAnchor
                                    className=""
                                    data-test-id="action-link"
                                    disabled={false}
                                    onClick={[Function]}
                                  >
                                    <a
                                      className="css-19ecu88-ActionLinkAnchor ehtyk0g0"
                                      data-test-id="action-link"
                                      disabled={false}
                                      onClick={[Function]}
                                    >
                                      Another version…
                                    </a>
                                  </ActionLinkAnchor>
                                </ActionLink>
                              </span>
                            </Container>
                          </InnerReference>
                        </Reference>
                      </Manager>
                    </Tooltip>
                  </li>
                </MenuItem>
              </ul>
            </span>
          </DropdownMenu>
        </DropdownLink>
      </div>
    </GuideAnchor>
  </div>
</ResolveActions>
`;
